# jarvis-agent

./: AGENTS.md  README.md
client/: package.json
client/rn/: App.tsx  app.json  package-lock.json  package.json
client/rn/android/: settings.gradle
client/rn/android/app/: build.gradle
client/rn/ios/: Podfile
client/rn/ios/JarvisAgent/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
client/rn/ios/JarvisAgent.xcodeproj/: project.pbxproj
client/rn/modules/rokid-cxr-client-m/: RokidCxrClientM.podspec  package.json
client/rn/modules/rokid-cxr-client-m/android/: build.gradle  gradle.properties
client/rn/modules/rokid-cxr-client-m/ios/: RokidCxrClientM.h  RokidCxrClientM.mm
client/rn/src/: config.ts
client/rn/src/components/: AudioControls.tsx  ConnectionControls.tsx  ConversationDisplay.tsx  EventsPanel.tsx
client/rn/src/navigation/: AppNavigator.tsx
client/rn/src/screens/: ChatScreen.tsx  SettingsScreen.tsx
client/rn/src/services/: GlassesConnectionContext.tsx  TransportContext.tsx
client/src/: config.ts
client/web/: env.example  package-lock.json  package.json
client/web/src/: config.ts  main.tsx
client/web/src/components/: WebSocketApp.tsx
client/web/src/utils/: serializer.ts
server/: .dockerignore  .env.example  AGENTS.md  Dockerfile  Jenkinsfile  bot.py  pyproject.toml  server.py  system_prompt.md
server/jarvis/: client.py  serializer.py  test_serializer.py
server/jarvis/qwen/: asr.py  tts.py
server/llm/: image_analyzer.py
server/mllm/: voice.py
server/qwen/: tts.py
(+9 files in other folders)
