[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[local-smart-turn-v3,qwen,runner,silero,webrtc,mcp]",
    "pipecat-ai-whisker",
    "pipecat-ai-tail",
    "dashscope>=1.25.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
